[gd_scene load_steps=3 format=3 uid="uid://cpwwc5ods0k2t"]

[ext_resource type="PackedScene" uid="uid://b0wxnmfknd8yg" path="res://menu_scenes/LevelEditor/Settings/ItemPermutator/item_permutator.tscn" id="1_fudny"]
[ext_resource type="Script" path="res://menu_scenes/LevelEditor/Settings/level_editor_settings.gd" id="1_n3gl6"]

[node name="LevelEditorSettings" type="Panel"]
offset_right = 800.0
offset_bottom = 500.0
script = ExtResource("1_n3gl6")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 54.0
offset_right = 724.0
offset_bottom = 474.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="BlockPermutator" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_fudny")]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2

[node name="ColorPermutator" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_fudny")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = 6.0
offset_right = 48.5
offset_bottom = 41.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Settings"
